# mongle-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  mongle_auth_api_spec.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md  troubleshooting.md
.github/workflows/: ci.yml  deploy-server.yml
apps/accounts/: __init__.py  apps.py  managers.py  models.py  validators.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/characters/: admin.py  ai_client.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/characters/management/commands/: reset_limits.py
apps/characters/migrations/: 0001_initial.py  0002_initial.py  0003_charactergenerationjob_character_generation_job_and_more.py  0004_alter_character_character_name.py  0005_status_values_uppercase.py  0006_character_visual.py  0007_alter_character_gen_img_url_and_more.py  0008_charactergenerationjob_appearance.py  0008_characterhome.py  0009_remove_charactergenerationjob_error_code_and_more.py  0009_update_characterhome_fields.py  0010_backfill_gen_img_object_key.py  0011_fix_gen_img_object_key_strip_bucket.py  0012_remove_character_gen_img_object_key.py  0013_add_appearance_payload.py  0013_charactergenerationjob_img_gen_log_id.py
apps/posts/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_options_alter_reply_options.py
apps/quests/: admin.py  models.py  serializers.py  urls.py  views.py
apps/quests/migrations/: 0001_initial.py  0002_initial.py  0003_add_status_to_quest.py  0003_quest_character_reaction_quest_status.py
apps/tags/: models.py  serializers.py  urls.py  views.py
apps/tags/migrations/: 0001_initial.py  0002_autofield_pk.py  0003_seed_defaults.py
apps/todos/: admin.py  ai_client.py  models.py  reflection_urls.py  reflection_views.py  schedule_urls.py  serializers.py  tasks.py  todo_ai_serializers.py  urls.py  views.py
apps/todos/migrations/: 0001_initial.py  0002_initial.py  0003_reflection_schedule.py  0004_tag_to_tags_app.py  0004_tag_user.py  0004_tag_user_tag_unique_user_tag.py  0005_tag_to_tags_app.py  0006_reflection_rewards_unique.py  0007_alter_todo_tag.py
apps/users/: admin.py  api_errors.py  models.py  notification_serializers.py  notification_service.py  notification_urls.py  notification_views.py  rate_limit.py  refresh_token_service.py  serializers.py  services.py  signup_views.py  social_views.py  tasks.py  urls.py  validators.py  views.py
apps/users/management/commands/: seed_dev.py
apps/users/migrations/: 0001_initial.py  0002_notification_tokentransaction.py  0003_alter_refreshtoken_token_hash.py  0004_refreshtoken_persistent.py  0005_alter_user_birth.py  0006_notification_data.py  0006_user_personalization.py  0007_merge_0006_notification_data_0006_user_personalization.py
common/: mixins.py  pagination.py  permissions.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
docs/: README.md  api-character-generation.md  api-reflection-todo-notification.md  api-test-results.md  auth_requirements.md  backend-api-flow.md  database-guide.md  database-tables.md  git-strategy.md  local-docker-guide.md  project-guide.md  redis-setup.md  setup-guide.md  smtp-setup.md
docs/api-spec/: api_spec.csv  api_spec_all.csv
infrastructure/: __init__.py  kakao.py
infrastructure/image_gen/: __init__.py  client.py
infrastructure/storage/: s3.py
nginx/: api.conf
scripts/: stage_fixes.py
src/mongle_server/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_accounts.py  test_auth_login.py  test_auth_logout.py  test_auth_password_revocation.py  test_auth_refresh.py  test_calendar.py  test_characters.py  test_health.py  test_kakao_login.py  test_posts.py  test_reflections.py  test_refresh_token_service.py  test_reset_limits.py  test_seed_dev.py  test_signup.py  test_tags.py  test_todos.py  test_todos_ai.py  test_users.py  test_withdraw.py
