[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongle-server"
version = "0.1.0"
description = "Django + MySQL backend service for Mongle."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Junghee Im", email = "imjion.dev@gmail.com"}]
keywords = ["django", "mysql", "backend"]

dependencies = [
    "Django>=5.2,<6.0",
    "django-environ>=0.11.2",
    "mysqlclient>=2.2.4",
]

[project.optional-dependencies]
dev = [
    "commitizen>=3.29.0",
    "django-stubs>=5.1.0",
    "mypy>=1.10",
    "pre-commit>=3.8.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-django>=4.9.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "PTH",
    "RUF",
    "S",
    "T20",
    "PERF",
    "TRY",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["mongle_server"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--strict-markers --strict-config -v"
DJANGO_SETTINGS_MODULE = "mongle_server.settings"

[tool.coverage.run]
source = ["src/mongle_server"]
branch = true
omit = [
    "src/mongle_server/asgi.py",
    "src/mongle_server/settings.py",
    "src/mongle_server/wsgi.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
mypy_path = ["src"]

[tool.django-stubs]
django_settings_module = "mongle_server.settings"

[[tool.mypy.overrides]]
module = ["environ"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_files = [
    "pyproject.toml:version",
]

[tool.commitizen.customize]
schema = """
<type>(<scope>): <subject>
<BLANK LINE>
<body>
<BLANK LINE>
<footer>
"""
schema_pattern = "^(feat|fix|docs|refactor|chore|revert|perf)(\\(\\w+\\))?!?: .{1,100}"
bump_pattern = "^(feat|fix|perf|refactor)"
bump_map = { "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
